fixed css spacing

--- a/css/jon.css
+++ b/css/jon.css
@@ -5,7 +5,8 @@
     border-width:1px;
 }
 .form-group label .text-muted {
-    font-weight:500;}
+    font-weight:500;
+}
 .modal-backdrop {
     background-color:#fff;
 }
